--- a/src/docs/products.yaml
+++ b/src/docs/products.yaml
@@ -1,113 +1,166 @@
 paths:
   /api/products:
     get:
-      summary: Get all products
+      summary: Retrieve a list of products
+      description: Returns a list of products with optional pagination and filtering parameters.
       tags:
         - Products
       responses:
         "200":
-          description: All products
-        "500":
-          description: Server error
+          description: A list of products
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Product'
         "400":
-          desscription: Some data is missing
+          description: Invalid request parameters
+        "500":
+          description: Internal server error
+
     post:
-      summary: Create product
+      summary: Create a new product
+      description: Adds a new product to the collection.
       tags:
         - Products
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Product'
       responses:
-        "200":
-          description: Product created
-        "500":
-          description: Error al crear el producto
+        "201":
+          description: Product created successfully
         "400":
-          desscription: Some data is missing
-    delete:
-      summary: Delete product
-      tags:
-        - Products
-      responses:
-        "200":
-          description: Product deleted
+          description: Invalid input, object invalid
         "500":
-          description: Error al crear el producto
-        "400":
-          desscription: Some data is missing
+          description: Internal server error
 
   /api/products/{id}:
     get:
-      summary: Get product by ID
+      summary: Get a product by its ID
+      description: Returns a single product by its unique identifier.
       tags:
         - Products
-      parameteres:
+      parameters:
         - name: id
           in: path
-          description: Product identifier
-      responses: 
-        "200":
-          description: One product found
-          content:
-            application/json:
-              schemas:
-                schemas:
-                  $ref: "#/components/schemas/Product"
-                example:
-                  id: 456468fsf5
-                  title: A
-                  description: asdad
-                  price: 12
-                  thumbnail: dada
-                  code: dasd4
-                  stock: 34
-                  category: asd
-        "500":
-          description: Server error
-        "400":
-          desscription: Some data is missing
-
-    put:
-      summary: Update product
-      tags:
-        - Products
+          required: true
+          description: Unique identifier of the product
+          schema:
+            type: string
       responses:
         "200":
-          description: Product updated
+          description: Details of the product
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        "404":
+          description: Product not found
         "500":
-          description: Error updating
-        "400":
-          desscription: Some data is missing
+          description: Internal server error
 
-components: 
+    put:
+      summary: Update a product
+      description: Updates an existing product identified by its ID.
+      tags:
+        - Products
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Unique identifier of the product to update
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Product'
+      responses:
+        "200":
+          description: Product updated successfully
+        "400":
+          description: Invalid input, object invalid
+        "404":
+          description: Product not found
+        "500":
+          description: Internal server error
+
+    delete:
+      summary: Delete a product
+      description: Deletes a product identified by its ID.
+      tags:
+        - Products
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Unique identifier of the product to delete
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Product deleted successfully
+        "404":
+          description: Product not found
+        "500":
+          description: Internal server error
+
+components:
   schemas:
     Product:
       type: object
-      properties: 
+      required:
+        - title
+        - description
+        - price
+        - code
+        - category
+        - statues
+      properties:
         id:
           type: string
-        title: 
+          description: Unique identifier for the product
+        title:
           type: string
+          description: Name of the product
         description:
           type: string
+          description: Detailed description of the product
         price:
           type: number
+          description: Price of the product
         thumbnail:
           type: string
+          description: URL of the product image
         code:
           type: string
+          description: Product code or SKU
         stock:
           type: number
+          description: Available stock of the product
         category:
           type: string
-
+          description: Category of the product
+        statues:
+          type: boolean
+          description: Status of the product (active/inactive)
+        owner:
+          type: string
+          description: ID of the user who owns the product
       example:
-        id: 456468fsf5
-        title: A
-        description: asdad
-        price: 12
-        thumbnail: dada
-        code: dasd4
-        stock: 34
-        category: asd
-
-
-
+        id: "123456789"
+        title: "Example Product"
+        description: "This is an example product description."
+        price: 99.99
+        thumbnail: "http://example.com/product.jpg"
+        code: "EX1234"
+        stock: 10
+        category: "Electronics"
+        statues: true
+        owner: "5f50c31e468cbb34e4883f48"
